// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a chart with data and no error unchanged 1`] = `
<div>
  <div
    class="chartContainer"
  >
    <div
      class="chart"
      title="Click on any section to see a list of repos that uses the language"
    >
      <mock-react-resize-detector>
        <div
          class="recharts-responsive-container"
          style="width: 94%; height: 100%;"
        />
      </mock-react-resize-detector>
    </div>
    <div
      class="repoInfo"
      id="repos"
    />
  </div>
</div>
`;

exports[`renders a repo with an error unchanged 1`] = `
<div>
  <div>
    failed to load chart
  </div>
</div>
`;

exports[`renders a repo with no data and no error unchanged 1`] = `
<div>
  <div>
    loading chart data...
  </div>
</div>
`;
